up 14.07